Padding for the entire card component removed to fix gap issues

--- a/digital-business-card/src/components/Card.css
+++ b/digital-business-card/src/components/Card.css
@@ -1,7 +1,6 @@
 .card-elem {
     background-color: azure;
-    padding: 50px;
-    width: 400px;
+    width: 500px;
     height: 100%;
     border-radius: 10px;
 }
